# blocktest-yarp-plugins

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/release/: v1_0_0.md  v1_1_0.md  v1_1_1.md  v1_1_2.md
src/: actionApplyForce.cpp  actionApplyForce.h  actionCanClose.cpp  actionCanClose.h  actionCanOpen.cpp  actionCanOpen.h  actionCanRead.cpp  actionCanRead.h  actionCanWrite.cpp  actionCanWrite.h  actionCanWritePD.cpp  actionCanWritePD.h  actionCheckComDistance.cpp  actionCheckComDistance.h  actionCheckJointPosition.cpp  actionCheckJointPosition.h  actionCheckPosition.cpp  actionCheckPosition.h  actionCheckRobot.cpp  actionCheckRobot.h  actionCheckVertical.cpp  actionCheckVertical.h  actionGenerateTrajectory.cpp  actionGenerateTrajectory.h  actionPolydriverClose.cpp  actionPolydriverClose.h  actionPolydriverOpener.cpp  actionPolydriverOpener.h  actionPortClose.cpp  actionPortClose.h  actionPortConnect.cpp  actionPortConnect.h  actionPortDisconnect.cpp  actionPortDisconnect.h  actionPortOpen.cpp  actionPortOpen.h  actionPortRead.cpp  actionPortRead.h  actionPortWrite.cpp  actionPortWrite.h  (+31 more)
src/unusedactions/: actionGenerateTrajectory.cpp  actionGenerateTrajectory.h  actionPrepareStraightWalking.cpp  actionPrepareStraightWalking.h  actionResetWalking.cpp  actionResetWalking.h  actionSetVelocity.cpp  actionSetVelocity.h  actionStartWalking.cpp  actionStartWalking.h
test/: 1000.xml  test.xml
xmltemplate/yarp/: parameters.xml  yarpcanclose.xml  yarpcanopen.xml  yarpcanread.xml  yarpcanwrite.xml  yarpclosepolydriver.xml  yarpconnect.xml  yarpdisconnect.xml  yarpopenpolydrive.xml  yarpopenpolydriver.xml  yarpportclose.xml  yarpportopen.xml  yarpportread.xml  yarpportwrite.xml
